# UV_Article_Scanner

./: README.md
barcode_uv_2025/: ArticleScanner.py  DatabaseTable.py  INFO.txt  barcode_data.db  pyproject.toml  requirements.txt
barcode_uv_2025/web/: index.html  main.js  styles.css
