[project]
name = "barcode-uv-2025"
version = "0.1.0"
description = "Article Scanner and Product Overview "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eel==0.18.1",
    "opencv-contrib-python==4.11.0.86",
    "opencv-python==4.11.0.86",
    "pyzbar==0.1.9",
    "requests==2.32.5",
]
